--- a/style.css
+++ b/style.css
@@ -1,23 +1,37 @@
 *{
 	margin:5px 5px 5px 5px;
 	
-	background-color: #324ab31a;
+
 	border-radius: 6px;
 }
 .wrap{
 	width:auto;
 	font-family: sans-serif;
-	
+	font-size: 20px;
+	background-color: black;
+	color: white;
 	margin:auto;
 	border-radius: 6px;
+
 	
+}
+.a p{
+	background-image: url(hero_unit.jpeg);
+	width: auto;
+
+
+
+}
+.a{
+	background-image: url(hero_unit.jpeg);
+	height: 300px;
+	
+	width: auto;
+
 }
 .child{
 	align-content: center;
 	display: inline-block;
-}
-.a{
-	border-radius: 8px;
 }
 .b{
 	float:right;
@@ -31,15 +45,15 @@ justify-content: center;
 
 }
 .col1{
-	width:30%;
+	width:auto;
 	
 	float:left;
 }
 .col2{
-	width:30%;
+	width:auto;
 }
 .col3{
-	width:30%;
+	width:auto;
 	float:right;
 }
 
@@ -48,9 +62,10 @@ justify-content: center;
 }
 .menu{
 	text-align: right;
+
 }
  li{
-	
+	padding-left: 40px;
   display: inline-block;
   
 }
@@ -63,14 +78,17 @@ ul a:hover
 	color: black;
 }
 .cc{
+
 	text-align: right;
+	background-color: grey;
+	color: black;
 }
 .mfoot{
 	display: -webkit-flex
 -webkit-flex-justify-content: center;
 display: flex;
 justify-content: center;
-	
+	background-color: grey;
 
 }
 .foot{
@@ -80,6 +98,22 @@ justify-content: center;
 }
 
 .foot1{
-	width:30%;
+	width:15%;
 	float:right;
+}
+.foot2{
+	width:15%;
+	float:right;
+}
+.foot3{
+	width:15%;
+	float:right;
+}
+.foot4{
+	width:15%;
+	float:right;
+}
+img{color: transparent;
+  font-size: 0;
+  vertical-align: middle;
 }
